Fix unicode emoji conversion on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -140,6 +140,7 @@ main#content div#reading {
 }
 
 main#content .rec {
+    font-family: monospace;
     padding-left: 5px;
 }
 
